crates/peach_domain/src/snapshots/peach_domain__context__tests__update_image_tool_calls_single_image.snap
---
source: crates/peach_domain/src/context.rs
expression: actual
---
messages:
  - text:
      role: System
      content: System message
  - tool:
      name: image_tool
      call_id: call1
      output:
        is_error: false
        values:
          - text: "[The image with ID 0 will be sent as an attachment in the next message]"
  - text:
      role: User
      content: "[Here is the image attachment for ID 0]"
  - image:
      url: "data:image/png;base64,test123"
      mime_type: image/png
